--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ Automat==20.2.0
 Babel==2.8.0
 bcrypt==3.2.0
 beautifulsoup4==4.11.1
+boto3
+botocore
 blinker==1.4
 certifi==2020.6.20
 chardet==4.0.0
